k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validate-frontend
spec:
  template:
    spec:
      containers:
        - name: validate-frontend
