k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: validate-frontend
spec:
  tls:
    - hosts:
        - api.validate.myapp.com
      secretName: api-validate-myapp-com-tls
  rules:
    - host: api.validate.myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: validate-frontend
                port:
                  number: 80
